# haskell-fio

./: CHANGELOG.md  LICENSE  README.md  ci.dhall  default.nix  fio.cabal
.github/workflows/: ci.yaml
app/: Main.hs
src/API/: Fio.hs
src/API/Fio/: Client.hs  Types.hs  Util.hs
src/API/Fio/Types/: AccountStatement.hs  Payment.hs  Token.hs
test/: ParseSpec.hs  SpecHelper.hs
test/samples/: 0.pretty  1.json  2.pretty  3.pretty  4.pretty
